feat(Tickets): tickets handlers with validation
