# api/server.go
@@ -1,6 +1,7 @@
 package server
 
 import (
+	"context"
 	"database/sql"
 	"log"
 	"net/http"
@@ -12,6 +13,7 @@ import (
 	"github.com/darkjedidj/cinema-service/api/halls"
 	"github.com/darkjedidj/cinema-service/api/movies"
 	"github.com/darkjedidj/cinema-service/api/sessions"
+	"github.com/darkjedidj/cinema-service/api/tickets"
 )
 
 type App struct {
@@ -19,9 +21,12 @@ type App struct {
 }
 
 // New creates router with handler
-func (a *App) New(db *sql.DB, l *zap.Logger) {
+func (a *App) New(db *sql.DB, l *zap.Logger, c context.Context) {
 
 	myRouter := mux.NewRouter().StrictSlash(false)
+	myRouter.HandleFunc("/v1/tickets/{id}", tickets.Init(db, l, c).HandleID)
+	myRouter.HandleFunc("/v1/tickets", tickets.Init(db, l, c).Handle)
+	myRouter.HandleFunc("/v1/sessions/{id}/tickets", tickets.Init(db, l, c).Create)
 	myRouter.HandleFunc("/v1/sessions/{id}", sessions.Init(db, l).HandleID)
 	myRouter.HandleFunc("/v1/sessions", sessions.Init(db, l).Handle)
 	myRouter.HandleFunc("/v1/halls/{id}/sessions", sessions.Init(db, l).Create)
